fix for invisible image

--- a/src/components/main/blocks/fabAnimation/fabAnimation.module.scss
+++ b/src/components/main/blocks/fabAnimation/fabAnimation.module.scss
@@ -1,7 +1,3 @@
-
-img {
-  max-width: 4000vw;
-}
 .section {
   .heading {
     font-size: 2.8vw;
@@ -12,17 +8,17 @@ img {
     color: #d50f09;
     font-weight: 900;
   }
-  .subHeading {
+  .sub-heading {
     font-size: 1vw;
     width: 100%;
     text-align: center;
   }
-  .animationContainer {
+  .animation-container {
     display: grid;
     grid-template-columns: 40% 40% 20%;
     padding: 2vw;
     align-items: center;
-    .imageContainer {
+    .image-container {
       height: 30vw;
       overflow: hidden;
       position: relative;
@@ -34,6 +30,7 @@ img {
         width: 1550vw;
         transform: translateX(-97%);
         background-repeat: no-repeat;
+        max-width: 4000vw;
       }
       .image01 {
         animation-name: move0-1;
@@ -108,7 +105,7 @@ img {
         animation-fill-mode: forwards;
       }   
     }
-    .infoContainer {
+    .info-container {
       padding: 9vw 4vw 4vw 9vw;
       position: relative;
       .info {
@@ -140,7 +137,7 @@ img {
           }
         }    
       }
-      .infoShow {
+      .info-show {
         opacity: 1;
         visibility: visible;
       }
@@ -152,7 +149,7 @@ img {
       grid-row-gap: 2.5vw;
       justify-content: center;
       align-items: center;
-      .iconContainer {
+      .icon-container {
         height: 3.2vw;
         width: 3.2vw;
         background: #d50f09;
@@ -175,14 +172,14 @@ img {
           margin: 0;
         }
       }
-      .iconContainer:hover {
+      .icon-container:hover {
         opacity: 1;
       }
-      .iconContainerActive {
+      .icon-container-active {
         transform: scale(1.5);
         opacity: 1;
       }
-      .iconContainerActive:before {
+      .icon-container-active:before {
         content: "";
         height: 5.2vw;
         width: 5.2vw;
@@ -192,7 +189,7 @@ img {
         opacity: .15;
         transition: opacity 0.5s;
       }
-      .iconContainerActive:after {
+      .icon-container-active:after {
         content: "";
         height: 4.3vw;
         width: 4.3vw;
@@ -212,14 +209,14 @@ img {
     .heading {
       font-size: 4.2vw;
     }
-    .subHeading {
+    .sub-heading {
       font-size: 1.5vw;
       width: 70%;
       text-align: center;
       margin-left: auto;
       margin-right: auto;
     }
-    .animationContainer {
+    .animation-container {
       display: grid;
       grid-template-columns: auto;
       grid-template-areas:
@@ -229,7 +226,7 @@ img {
       padding: 2vw;
       align-items: center;
       justify-content: center;
-      .imageContainer {
+      .image-container {
         height: 50vw;
         width: 80vw;
         overflow: hidden;
@@ -316,7 +313,7 @@ img {
           animation-fill-mode: forwards;
         }   
       }
-      .infoContainer {
+      .info-container {
         padding: 9vw 4vw 4vw 9vw;
         position: relative;
         grid-area: bottom;
@@ -345,7 +342,7 @@ img {
             }
           }    
         }
-        .infoShow {
+        .info-show {
           opacity: 1;
           visibility: visible;
         }
@@ -358,7 +355,7 @@ img {
         grid-column-gap: 5vw;
         justify-content: center;
         align-items: center;
-        .iconContainer {
+        .icon-container {
           height: 4.8vw;
           width: 4.8vw;
           background: #d50f09;
@@ -381,11 +378,11 @@ img {
             margin: 0;
           }
         }
-        .iconContainerActive {
+        .icon-container-active {
           transform: scale(1.5);
           opacity: 1;
         }
-        .iconContainerActive:before {
+        .icon-container-active:before {
           content: "";
           height: 7.8vw;
           width: 7.8vw;
@@ -395,7 +392,7 @@ img {
           opacity: .15;
           transition: opacity 0.5s;
         }
-        .iconContainerActive:after {
+        .icon-container-active:after {
           content: "";
           height: 6.45vw;
           width: 6.45vw;
